--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,10 +18,10 @@ repos:
         args: [--fix, --exit-non-zero-on-fix, --ignore, N803, --ignore, N806, --ignore, N812]
       - id: ruff-format
 
-  # - repo: https://github.com/pre-commit/mirrors-mypy
-  #   rev: v1.13.0
-  #   hooks:
-  #     - id: mypy
-  #       # additional_dependencies: [types-all]
-  #       args: [--ignore-missing-imports]
-  #       exclude: ^tests/
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.18.2
+    hooks:
+      - id: mypy
+        # additional_dependencies: [types-all]
+        args: [--ignore-missing-imports]
+        exclude: ^tests/
