--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,7 +81,7 @@ target-version = "py311"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
-ignore = ["E501"]
+ignore = ["E501", "N803", "N806", "N812"]
 
 [tool.ruff.format]
 quote-style = "double"
