feat(dvc): initialize DVC with GCS remote (US-002)

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ MLFLOW_TRACKING_URI=http://localhost:5000
 # DVC Remote
 DVC_REMOTE=gs://geo-rect-artifacts
 
+# GCP Credentials (for DVC)
+GOOGLE_APPLICATION_CREDENTIALS=credentials/gcp-dvc-key.json
+
 # Application
 LOG_LEVEL=INFO
 DEBUG=false
