--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ diskcache = "^5.6.3"
 tqdm = "^4.67.0"
 loguru = "^0.7.2"
 joblib = "^1.4.2"
+dvc-gs = "^3.0.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.2"
